--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-social-share-buttons": "^1.0.2",
     "react-spinners": "^0.2.6",
     "react-thunk": "^1.0.0",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "thunk": "0.0.1"
