--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-scroll-parallax": "^1.3.3",
     "react-social-share-buttons": "^1.0.2",
     "react-spinners": "^0.2.6",
     "react-thunk": "^1.0.0",
