--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "thunk": "0.0.1"
+    "thunk": "0.0.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
