--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 node_js: node
+node_js:
+  - "iojs"
+  - "8"
 cache:
   directories:
     - node_modules
@@ -14,7 +17,6 @@ before_install:
 
 before_deploy:
   - npm install netlify-cli -g
-  - npm update
   - npm run build
 
 deploy:
